--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
         
         stage('test') {
             steps {
-                sh 'mvn test'
+                echo 'haha'
             }
         }
         
