--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
     agent any
     tools { 
       maven 'jenkins-maven'
+      docker 'docker'
     }
     stages {
         stage('Checkout') {
