--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,6 +3,11 @@ pipeline {
     tools { 
       maven 'jenkins-maven'
     }
+
+    environment {
+        PATH = "/usr/local/bin:$PATH"
+    }
+
     stages {
         stage('Checkout') {
             steps {
