--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -23,7 +23,9 @@ pipeline {
         
         stage('build docker') {
             steps {
-                sh 'docker build -t ha/app .'
+                script {
+                    sh 'docker build -t ha/app .'
+                }
             }
         }
     }
