--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -35,7 +35,9 @@ pipeline {
         stage('Push docker') {
             steps {
                 script {
-                    sh 'docker login -u $registryCredential -p $registryPassword'
+                    withCredentials([usernamePassword(credentialsId: 'dockerhub_id', passwordVariable: 'pass', usernameVariable: 'username')]) {
+                        sh "docker login -u ${username} -p ${pass}"
+                    }
                     sh 'docker push $registry'
                 }
             }
